# articles

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  ai_developer_enterprise.md  ai_engineer_deepdive.md  data_engineer_enterprise.md  data_scientist_enterprise.md  extract_mermaid.py  fast_mcp_test_results.json  fix_broken_diagrams.py  generate_report.py  link_test_results.json  mcp_test_results.json  ml_engineer_enterprise.md  ml_engineer_skills_assessment.md  mlops_architecture_guide.md  pyproject.toml  quick_fix_diagrams.py  requirements-dev.txt  test_links.py  verify_docs.py
docs/: MCP_INTEGRATION_SUMMARY.md  MCP_MERMAID_VERIFICATION_SUMMARY.md  MCP_TESTING_PROCESS.md  MERMAID_ENHANCEMENT_SUMMARY.md  PR_DESCRIPTION.md  PR_SUMMARY.md  REPOSITORY_REFINEMENT_SUMMARY.md  VERIFICATION.md  cleanup_summary.json  mermaid_enhancement_report.json  mermaid_verification_report.json
extracted_diagrams/: README_diagram_1.mmd  README_diagram_1_enhanced.mmd  README_diagram_2.mmd  README_diagram_3.mmd  README_diagram_4.mmd  ai-developer_diagram_1.mmd  ai-developer_diagram_1_enhanced.mmd  ai-developer_diagram_2.mmd  ai-developer_diagram_2_enhanced.mmd  ai-developer_diagram_3.mmd  ai-developer_diagram_3_enhanced.mmd  ai-engineer_diagram_1.mmd  ai-engineer_diagram_1_enhanced.mmd  ai-engineer_diagram_2.mmd  ai-engineer_diagram_2_enhanced.mmd  ai-roles-workflows-comprehensive_diagram_1.mmd  ai-roles-workflows-comprehensive_diagram_10.mmd  ai-roles-workflows-comprehensive_diagram_10_enhanced.mmd  ai-roles-workflows-comprehensive_diagram_11.mmd  ai-roles-workflows-comprehensive_diagram_11_enhanced.mmd  ai-roles-workflows-comprehensive_diagram_1_enhanced.mmd  ai-roles-workflows-comprehensive_diagram_2.mmd  ai-roles-workflows-comprehensive_diagram_2_enhanced.mmd  ai-roles-workflows-comprehensive_diagram_3.mmd  ai-roles-workflows-comprehensive_diagram_3_enhanced.mmd  ai-roles-workflows-comprehensive_diagram_4.mmd  ai-roles-workflows-comprehensive_diagram_4_enhanced.mmd  ai-roles-workflows-comprehensive_diagram_5.mmd  career-pathways_diagram_1.mmd  (+44 more)
(+26 files in other folders)
